test_suite/alan-2022-examples/failing/001490_mutation.alan
source U begin call hW(651, 3 /) end
